# astrhtml

./: .cursorrules  .gitignore  .gitmodules  CLAUDE.md  DONE.md  README.md  TODO.md  build.py  preview.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  inside-container.settings.local.json
.github/workflows/: deploy.yml  update-submodule.yml
docs/: arknights_story_json_data_structure.md
scripts/: check_empty_events.py  check_links.py  deploy.sh
src/: config.py
src/generators/: base_generator.py  bookmark_generator.py  event_generator.py  index_generator.py  main_story_generator.py  ngram_search_index.py  search_index.py  story_generator.py
src/lib/: data_loader.py  event_parser.py  main_story_parser.py  stage_parser.py  story_parser.py  wordcount_parser.py  zone_parser.py
src/models/: activity.py  event.py  story.py  zone_info.py
src/utils/: date_formatter.py  file_utils.py  story_renderer.py  text_processor.py
static/css/: bookmarks.css  main.css  main_story.css  story.css
static/js/: bookmark.js  bookmarks-page.js  filters.js  font.js  ngram_search.js  search.js  search_manager.js  theme.js
templates/: base.html  bookmarks.html  event.html  index.html  main_story_chapter.html  main_story_index.html  story.html
tests/e2e/: test_search.py
tools/bigram-index/: Cargo.toml
tools/bigram-index/src/: main.rs
